Couple last edits for 1.2

--- a/main.tex
+++ b/main.tex
@@ -79,7 +79,7 @@ With coordinate systems now defined, we recognize that in many instances, two di
 
 
 
-\begin{figure}
+\begin{figure}[h]
 \begin{center}
 \begin{tikzcd}
 	U \arrow[r, "Q", leftrightarrow] \arrow[d, "U \cap V" left, leftrightarrow] & \mathbb{R}^n \\
@@ -128,7 +128,7 @@ Consider again the weather report example, where we are taking into account wher
 \end{defn}
 
 
-\begin{figure}
+\begin{figure}[h]
 \begin{center}
 \begin{tikzcd}
 X \arrow[r, "Q", leftrightarrow] & \mathbb{R}^n \\
@@ -167,7 +167,7 @@ We can map between a k-surface and its boundary, if it exists, with the \textbf{
 	For k-surface $\sigma^k \in S^k$, the \textbf{boundary operator} $\partial : S^k \to S^{k-1}$ gives the set of boundary points of $\sigma^k$. 
 \end{defn}
 
-Intuitively, we can in general talk about the boundary of a k-surface being a wall, beyond which a point confined to the k-surface cannot go. In this way, the surface of the Earth acts as a boundary of the Earth. On the other hand, suppose we are restricting ourselves now just to the boundary of the Earth. We can travel along the surface as long as we wish in any direction without being stopped by any kind of wall. Thus, the surface of the Earth does not have a boundary. This is true for general k-surfaces, but proving it is beyond the scope of this project. \textbf{Probably have a picture}
+Intuitively, we can in general talk about the boundary of a k-surface being a wall, beyond which a point confined to the k-surface cannot go. In this way, the surface of the Earth acts as a boundary of the Earth. On the other hand, suppose we are restricting ourselves now just to the boundary of the Earth. We can travel along the surface as long as we wish in any direction without being stopped by any kind of wall. Thus, the surface of the Earth does not have a boundary. The fact that the boundary of a k-surface does not have a boundary is true for general k-surfaces, but proving it is beyond the scope of this project. \textbf{Probably have a picture}
 
 
 
