--- a/main.tex
+++ b/main.tex
@@ -287,9 +287,7 @@ This introduction of the exact functional $\eth h$ keeps the value of $g(\sigma)
 
 
 
-In the previous section, we discussed functionals applied over k-surfaces. With the rules we've established, we can break up a k-surface into multiple sections, such that applying a functional over the entire surface is equivalent to applying it to each of the sections individually, and then summing their contributions. Importantly though, we remained entirely finite. This is important, as in the real world, we deal only with the finite. We measure mass, not density, for instance. Nevertheless, we were able to finally define boundary functionals, and their relationship with the boundary of surfaces. Now, we will be examining surfaces under the condition that we can break them up into infinitesimally small pieces. How would our manifolds behave, and furthermore, what happens to the functionals? We shall see that the tools we've already defined have a close correspondence to infinitesimal varieties, which may be more familiar to the reader. 
-
-Consider now a k-surface $\sigma^k \in S^k$, with a k-functional $f_k$. We can break this surface up into "n" number of parts, called $\sigma^k_1, \sigma^k_2, ..., \sigma^k_n$. We know that \begin{gather} f_k(\sigma^k) = f_k(\sigma^k_1) + f_k(\sigma^k_2) + ... + f_k(\sigma^k_n) = \sum^n_if_k(\sigma^k_i).\end{gather} In the limit as n tends to infinity, the parts become infinitesimal. Summing the contributions of the infinitesimals is equivalent to an integral of the function over the whole surface. So, for k-surface $\sigma^k \in S^k$ and k-functional $f_k: S^k \to \mathbb{R}$, \begin{gather} f_k(\sigma^k) = \int_{\sigma^k}\omega_k(d\sigma^k) \end{gather} for some yet undefined function $\omega_k$. The existence of infinitesimals on our manifolds allows us to perform calculus. Such manifolds are \textbf{differentiable manifolds}. 
+In the previous section, we discussed functionals applied over k-surfaces. With the rules we've established, we can break up a k-surface into multiple sections, such that applying a functional over the entire surface is equivalent to applying it to each of the sections individually, and then summing their contributions. Importantly though, we remained entirely finite. This is important, as in the real world, we deal only with the finite. We measure mass, not density, for instance. Nevertheless, we were able to finally define boundary functionals, and their relationship with the boundary of surfaces. Now, we will be examining surfaces under the condition that we can break them up into infinitesimally small pieces. How would our manifolds behave, and furthermore, what happens to the functionals? We shall see that the tools we've already defined have a close correspondence to infinitesimal varieties, which may be more familiar to the reader. The existence of infinitesimals on our manifolds allows us to define tangents, and infinitesimal functionals along those tangents. Such manifolds are \textbf{differentiable manifolds}. 
 
 Technically speaking, differentiability is a property not of the manifold, but of the coordinate systems that are defined on it. And furthermore, not every coordinate system is differentiable. In order to maintain differentiability on our manifolds, we will be constraining ourselves to coordinate systems which are differentiable. Essentially, what we're doing here is looking at an entire manifold, with all of its constituent subsections and thereon defined coordinate systems, and disregarding the coordinate systems that are not differentiable. This property manifests itself as the coordinate transformation between subsets of the manifold being smooth. 
 
@@ -298,9 +296,9 @@ Technically speaking, differentiability is a property not of the manifold, but o
 	A \textbf{differentiable manifold} is a manifold $X$ of dimension $n$ such that if there are overlapping subsets $U$ and $V$ with defined coordinate systems $Q: U \to \mathbb{R}^n$ and $Q': V \to \mathbb{R}^n$, then the coordinate transformation $f = Q \circ Q'^{-1}$ is smooth. 
 \end{defn}
 
-Now is a good time to emphasize once again that we consider "physical" that which can be directly measured in a laboratory. Infinitesimals, therefore, are not truly physical. They are a limit of the finite case. We do not measure $\omega_k(d\sigma^k)$. Rather, we measure $\int_{\sigma^k}\omega_k(d\sigma^k)$. 
 
-Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, such that $M(\tau)$ is the mass of $\tau$.  As long as we remain finite, we can break up $\tau$ as we wish, determine the mass of each of the pieces, sum them, and we would get the same result as determining the mass of the entire ensemble, all while remaining entirely physical. The mass functional $M$ remains unchanged. As soon as we decide that we are going to be considering the infinitesimal limit, however, our tools change shape. We enter the realm of the nonphysical, so to speak. We have that $M(\tau) = \int_\tau \rho(d\tau)$, where $\rho$ is an infinitesimal functional that determines density. Such an infinitesimal functional is, at the moment, not precisely defined. It is fascinating to see, however, that as we change the assumptions that we are working with, the math will, when properly physically motivated, change form as well to reflect these new assumptions. It is with this spirit that we press forward to see what happens to our finite tools in the infinitesimal limit. 
+
+
 
 
 
@@ -308,7 +306,7 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 
 
-Let $W \in F_1$ be the work function with a force as described in section 1.3, and let $\lambda \in S^1$ be the line that we are passing it. So, we can say that $W(\lambda) = \sum^n_iW(\lambda_i)$, where the ending point of each $\lambda_i$ is the starting point of each $\lambda_{i+1}$. In the limit as n tends to infinity, this expression becomes \begin{gather}W(\lambda) = \int_{\lambda} f(d\lambda) \end{gather}for a function $f$. Naturally, this function will be a force function, returning the force applied over the line at each infinitesimal segment. Each $d\lambda$ represents an infinitesimal segment along the line $\lambda$ which, if summed together, will return $\lambda$. We call the infinitesimal segments of our line \textbf{vectors}. 
+Let $W \in F_1$ be the work function as described in section 1.3, and let $\lambda \in S^1$ be the line that we are passing it. So, we can say that $W(\lambda) = \sum^n_iW(\lambda_i)$, where the ending point of each $\lambda_i$ is the starting point of each $\lambda_{i+1}$. In the limit as n tends to infinity, this expression becomes \begin{gather}W(\lambda) = \int_{\lambda} f(d\lambda) \end{gather}for a function $f$. Naturally, this function will be a force function, returning the work at each infinitesimal segment. Each $d\lambda$ represents an infinitesimal segment along the line $\lambda$ which, if combined together, will return $\lambda$. We call the infinitesimal segments of our line \textbf{vectors}. 
 
 \begin{defn}
 	A \textbf{vector} $v^1 \in V^1$ is an infinitesimal segment along a line. A \textbf{tangent space}, then, is a collection of vectors that share a fixed point. 
@@ -320,7 +318,7 @@ As we are breaking up the line into infinitesimal segments, we see that the func
 	A \textbf{covector} $\omega_1 : V^1 \to \mathbb{R}$ is a linear function of vectors. 
 \end{defn}
 
-Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx$, and the infinitesimal segment (the vector) is $dx$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors.
+Concretely, consider a spring with spring constant $k$ and with a mass $m$ attached to the end, oscillating without drag. The work necessary to pull the mass from the point $x = a$ to $x = b$ (being the starting and ending points of the line $\lambda$) is $W(\lambda) = \int_a^b -kx dx$.\footnote{We are technically getting ahead of ourselves here by presenting the function with specific coordinates. We have been entirely coordinate-free so far, and will have to wait until section 2.4 for the discussion of working with coordinates} The force (the covector) is $-kx \hat{x}$, and the infinitesimal segment (the vector) is $dx \hat{x}$. In general, a 1-functional over a 1-surface is the integrated form of a covector over vectors. This is offered without proof. 
 
 
 
@@ -337,6 +335,8 @@ Concretely, consider a spring with spring constant $k$ and with a mass $m$ attac
 	S^1 \arrow[r, "\int" below, leftarrow] & V^1
 	\end{tikzcd}
 \end{center}
+
+While we are not going to go through the trouble of proving this, we can say for any 1-functional, we will be able to find a covector that, when integrated, will be "suitably close" to the functional. This is similar to the fact that any discontinuous line may be approximated with arbitrary precision by a smooth curve. 
 
 \begin{prop}
 	All linear 1-functionals have a corresponding covector, such that for $f : S \to \mathbb{R}$, $f = \int_{\lambda} \omega_1(d\lambda)$. In words, a linear functional applied over a line is the same as an integral of a covector over the infinitesimal segments of that line. Functionals may only be valid on certain patches in our space, however, meaning that we cannot necessarily define a form that works everywhere. 
@@ -390,6 +390,10 @@ To finish up the generalization of the previous section, we establish the relati
 	Every linear k-functional has a corresponding k-form, such that for $f_k : S^k \to \mathbb{R}$, $f_k = \int_{\sigma^k} \omega_k(d\sigma^k)$. In words, a linear functional applied over a k-surface is the same as an integral of a k-form over the infinitesimal parallelepipedes of that k-surface. 
 \end{prop}
 
+Now is a good time to emphasize once again that we consider "physical" that which can be directly measured in a laboratory. Infinitesimals, therefore, are not truly physical. They are a limit of the finite case. We do not measure $\omega_k(d\sigma^k)$. Rather, we measure $\int_{\sigma^k}\omega_k(d\sigma^k)$. 
+
+
+Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, such that $M(\tau)$ is the mass of $\tau$.  As long as we remain finite, we can break up $\tau$ as we wish, determine the mass of each of the pieces, sum them, and we would get the same result as determining the mass of the entire ensemble, all while remaining entirely physical. The mass functional $M$ remains unchanged. As soon as we decide that we are going to be considering the infinitesimal limit, however, our tools change shape. We enter the realm of the nonphysical, so to speak. We have that $M(\tau) = \int_\tau \rho(d\tau)$, where $\rho$ is an infinitesimal functional that determines density. It is fascinating to see that as we change the assumptions that we are working with, the math will, when properly physically motivated, change form as well to reflect these new assumptions. 
 
 
 A clarification must be made now. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. This particular characterization of $B$ depends on a notion of perpendicularity that is true for $\mathbb{R}^3$, but isn't for $\mathbb{R}^4$ and above, and is also the reason why we will not be using the cross product in our discussion here. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface (i.e., $B_z$ is actually $B_{xy}$). Furthermore, the cross product requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles (that comes in chapter 3). 
