differential manifold justification

--- a/main.tex
+++ b/main.tex
@@ -289,7 +289,9 @@ This introduction of the exact functional $\eth h$ keeps the value of $g(\sigma)
 
 In the previous section, we discussed functionals applied over k-surfaces. With the rules we've established, we can break up a k-surface into multiple sections, such that applying a functional over the entire surface is equivalent to applying it to each of the sections individually, and then summing their contributions. Importantly though, we remained entirely finite. This is important, as in the real world, we deal only with the finite. We measure mass, not density, for instance. Nevertheless, we were able to finally define boundary functionals, and their relationship with the boundary of surfaces. Now, we will be examining surfaces under the condition that we can break them up into infinitesimally small pieces. How would our k-surfaces behave, and furthermore, what happens to the functionals? We shall see that the tools we've already defined have a close correspondence to infinitesimal varieties, which may be more familiar to the reader. The existence of infinitesimals on our manifolds allows us to define tangents, and infinitesimal functionals along those tangents. Such manifolds are \textbf{differentiable manifolds}. 
 
-Technically speaking, differentiability is a property not of the manifold, but of the coordinate systems that are defined on it. And furthermore, not every coordinate system is differentiable. In order to maintain differentiability on our manifolds, we will be constraining ourselves to coordinate systems which are differentiable to each other. Essentially, what we're doing here is looking at an entire manifold, with all of its constituent subsections and thereon defined coordinate systems, and disregarding the coordinate systems that are not differentiable. This property manifests itself as the coordinate transformation between subsets of the manifold being smooth. 
+Technically speaking, differentiability is a property not of the manifold, but of the coordinate systems that are defined on it. And furthermore, not every coordinate system is differentiable. This is because "differentiability" itself is not defined in terms of one coordinate system. Rather, differentiability arises due to a property of coordinate transformations between coordinate systems. In order to maintain differentiability on our manifolds, we will be constraining ourselves to coordinate systems which are differentiable to each other. Essentially, what we're doing here is looking at an entire manifold, with all of its constituent subsections and thereon defined coordinate systems, and disregarding the coordinate systems that are not differentiable. This property manifests itself as the coordinate transformation between subsets of the manifold being smooth. 
+
+As a justification, consider a one-dimensional function one would encounter in a calculus class, $f: \mathbb{R} \to \mathbb{R}$. When we say that $f$ is differentiable, we are saying that it is differentiable in the variable, or with respect to the variable. So, the derivative of $f$ with respect to its variable (say, $x$) is $\frac{df}{dx}$. Translate this now into the language of manifolds. If differentiability is to be defined on a point on the manifold, it's clear that this must be done in terms of the coordinates used to define that point. 
 
 
 \begin{defn}
